--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,10 +1,32 @@
 {
   "compilerOptions": {
-    "target": "ES6",
-    "module": "CommonJS",
-    "outDir": "./dist",
-    "rootDir": "./src",
-    "strict": true,
-    "esModuleInterop": true
-  }
+    "target": "ES2020",
+    "module": "NodeNext",
+    "lib": ["ES2020", "esnext.asynciterable"],
+    "outDir": "dist",
+    "rootDir": ".",
+    "strict": false,
+    "strictPropertyInitialization": false,
+    "esModuleInterop": true,
+    "moduleResolution": "NodeNext",
+    "skipLibCheck": true,
+    "forceConsistentCasingInFileNames": true,
+    "allowJs": true,
+    "checkJs": false,
+    "resolveJsonModule": true,
+    "baseUrl": ".",
+    "paths": {
+      "@/*": ["src/*"]
+    }
+  },
+   "maxNodeModuleJsDepth": 5, // Add this to help handle node_modules
+   "typeInstantiationDepth": 100, // Increase type depth to avoid this error
+  "include": [
+    "src/*/*.ts",
+    "src/*/*.js"
+, "src/config/index.tjs"  ],
+  "exclude": [
+    "node_modules",
+    "dist"
+  ]
 }
