--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "license": "ISC",
   "dependencies": {
     "@coral-xyz/anchor": "^0.31.1",
+    "@metaplex-foundation/js": "^0.20.1",
     "@solana/actions": "^1.6.6",
     "@solana/spl-token": "^0.4.13",
     "@solana/web3.js": "^1.98.2",
