--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "type": "module",
   "scripts": {
     "start": "node dist/app.js",
-    "dev": "nodemon src/app.ts",
+    "dev": "nodemon --exec tsx src/app.ts",
     "dev2": "nodemon --exec tsx src/app.ts",
     "sap": "nodemon src/sap.ts",
     "build": "tsc"
